--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2016-03-15 Tue 15:56 -->
+<!-- 2016-03-15 Tue 15:58 -->
 <meta  http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta  name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yet Analytics</title>
@@ -190,7 +190,7 @@ and re-frame. Try it <a href="http://yetanalytics.github.io/re-pl/">here</a>.
 Or here:
 </p>
 
-<iframe src="http://yetanalytics.github.io/re-pl/"></iframe>
+<iframe src="http://yetanalytics.github.io/re-pl/" width="800px" height="600px"></iframe>
 </div>
 </div>
 
@@ -207,7 +207,7 @@ A community-driven specification for xAPI security
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jason Lewis</p>
-<p class="date">Created: 2016-03-15 Tue 15:56</p>
+<p class="date">Created: 2016-03-15 Tue 15:58</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
