--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2016-03-16 Wed 13:12 -->
+<!-- 2016-03-16 Wed 16:45 -->
 <meta  http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta  name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yet Analytics</title>
@@ -205,9 +205,8 @@ Or here:
 </div>
 </div>
 
-
 <div id="outline-container-orgheadline3" class="outline-3">
-<h3 id="orgheadline3"><span class="section-number-3">1.3</span> <a href="https://github.io/xapisec/xapisec">xAPIsec</a></h3>
+<h3 id="orgheadline3"><span class="section-number-3">1.3</span> <a href="http://xapisec.org/">xAPIsec</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <p>
 A community-driven specification for xAPI security
@@ -218,7 +217,7 @@ A community-driven specification for xAPI security
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jason Lewis</p>
-<p class="date">Created: 2016-03-16 Wed 13:12</p>
+<p class="date">Created: 2016-03-16 Wed 16:45</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
